# satellite_processor

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  APP_AUDIT_V2.md  APP_GRADE_REPORT.md  AUDIT-3.md  AUDIT-4.md  AUDIT-5.md  AUDIT-6.md  AUDIT-7.md  BATCH-PLAN.md  BUG_AUDIT.md  BUG_AUDIT_R3.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_REPORT.md  DEBUG_REPORT_2.md  E2E_INVESTIGATION.md  GOES_TABS_AUDIT.md  GOES_UX_PLAN.md  HIMAWARI.md  HIMAWARI_PLAN.md  HIMAWARI_PROGRESS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_V2.md  LIVE_BUG_REPORT.md  MODERNIZATION_PLAN.md  Makefile  POLISH_AUDIT.md  README.md  TAILWIND_BENCHMARK.md  UX_OVERHAUL_PLAN.md  app.py  backend_link  conftest.py  (+15 more)
.github/: actionlint.yaml  dependabot.yml  renovate.json
.scannerwork/: report-task.txt
backend/: .env.example  BENCHMARK.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
data/: app_settings.json
docs/: deployment.md
dogfood-output/: report.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
monitoring/: grafana-dashboard.json  grafana-datasource.yml  prometheus.yml
satellite_processor/: __init__.py  app.py  main_application.py  workers.py
satellite_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: generate_api_client.sh  merge_coverage.py  smoke_test.sh  smoke_test_deploy.sh  (+1 more)
(+896 files in other folders)
