[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["satellite_processor/core/tests", "backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
qt_api = "pyqt6"

[tool.coverage.run]
source = ["satellite_processor"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
show_missing = true
fail_under = 35
